--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">
     I value feedback from everyone who visits my portfolio. Your thoughts help me grow and improve my work. Feel free to explore the feedback shared below!
   </p>
-  <div style="width: 100%; position: relative; padding: 0 1.5rem;">
-    <div class="feedback-grid">
+  <div class="scrolling-wrapper">
+    <div class="scrolling-track">
       <a href="LINK1" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%201.png?raw=true" alt="Feedback 1" /></a>
       <a href="LINK2" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%202.png?raw=true" alt="Feedback 2" /></a>
       <a href="LINK3" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%203.png?raw=true" alt="Feedback 3" /></a>
@@ -369,15 +369,24 @@
   transition: opacity 0.8s ease, transform 0.8s ease;
 }
 
-.feedback-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+.scrolling-wrapper {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  padding: 0 1rem;
+  will-change: transform;
+}
+
+.scrolling-track {
+  display: flex;
   gap: 1.5rem;
-  justify-content: center;
-  align-items: center;
+  animation: scroll-loop 90s linear infinite;
+  will-change: transform;
 }
 
 .feedback-box {
+  flex: 0 0 auto;
+  width: 260px;
   height: 150px;
   border-radius: 8px;
   overflow: hidden;
@@ -401,6 +410,11 @@
   height: 100%;
   object-fit: cover;
   display: block;
+}
+
+@keyframes scroll-loop {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
 }
 </style>
 
