--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
 
 .feedback-box {
   flex: 0 0 auto;
-  width: 260px;
+  width: 100%;
+  max-width: 260px;
   height: 150px;
   border-radius: 8px;
   overflow: hidden;
