--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
   overflow: hidden;
   position: relative;
   width: 100%;
-  padding: 2rem 0; /* More vertical space to avoid cropping */
+  padding: 3rem 0; /* Tambah ruang vertical supaya bayang tak terpotong */
   will-change: transform;
 }
 
@@ -382,7 +382,7 @@
   gap: 1.5rem;
   animation: scroll-loop 90s linear infinite;
   will-change: transform;
-  padding: 0 2rem; /* Add inner padding to prevent edge clipping */
+  padding: 0 2rem; /* Tambah padding untuk elak shadow tersepit di tepi */
 }
 
 .feedback-box {
