--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
 
 .scrolling-wrapper {
   position: relative;
-  overflow: hidden;
+  overflow: visible;
+  padding-bottom: 3rem;
   width: 100%;
   height: 180px; /* Kawal tinggi supaya tak push page */
 }
